--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Sudarshan hinalje</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Sudarshan hingalje</span></h1>
 
 						
 						<span id="typing-animation"></span>
@@ -319,7 +319,7 @@
 
 			<img src="images/sudarshan_hingalje resume Qr.jpg" width="150" alt="resume" style="display: block; margin: 0 auto;"><br>
           	<h1 class="big big-2">Resume</h1>
-			  <a href="https://drive.google.com/file/d/1UF5sgAFKZWLwzv7k1PgEfp4-yoRz8e94/view?usp=sharing " class="btn btn-white btn-outline-white py-3 px-4">resume</a>
+			  <a href="https://drive.google.com/file/d/1T4X3WsYUaeYt1iDYV3RHppBMoqH4N48g/view?usp=sharing" class="btn btn-white btn-outline-white py-3 px-4">resume</a>
             <h2 class="mb-4">Resume</h2>
             
           </div>
@@ -392,7 +392,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1UF5sgAFKZWLwzv7k1PgEfp4-yoRz8e94/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1T4X3WsYUaeYt1iDYV3RHppBMoqH4N48g/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -513,7 +513,7 @@
           		</div>
 
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1UF5sgAFKZWLwzv7k1PgEfp4-yoRz8e94/view?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1T4X3WsYUaeYt1iDYV3RHppBMoqH4N48g/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
